--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
         </nav>
         <div class="container container-alert">
         <!--container class is used for the column layout - this is a bootstrap class
-        mt-3 is for spacing
         all the section below are included in article - semantic reason-->
             <div class="row d-none d-sm-block">
                 <div class="col-12">
@@ -57,24 +56,20 @@
                 </div>
             </div>
         </div>
-        <div class="container callout-container">
+        <div class="container-fluid callout-container">
+            <!-- Callout -->
+            <div class="opaque-overlay">&nbsp;</div>
             <div class="row">
-                <!--row followed by class col-x is required for the row layout-->
                 <div class="col-12">
-                    <!--col 12 above means row will occupy the whole space-->
                     <section class="callout jumbotron text-center">
-                    <!--jumbotron is for the section standout-->
-                    <!--callout section is important since it is the first things the user see when navigating in the page
-                    it will contain the subscribe button called "call to action" and it is the main action of the website-->
-                        <h1>The finest whiskeys delivered to your doorstep.</h1>
-                        <!--the h1 above heavily influence the search in google. this is very important for visibility-->
-                        <p>Sign up today to start receiving the world's best whiskeys every month. <s class="d-none d-sm-inline">$ 19.99</s>
+                        <h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
+                        <hr class="block-dividers block-dividers--orange">
+                        <p class="lead">Sign up today to start receiving the world's best whiskeys every month.
+                            <s class="d-none d-sm-inline">€19.99</s>
                             <span class="d-inline d-sm-none"><br></span>
-                            <!--classses above are for remove the 19.99 in the smaller screen-->
                             <strong><mark>First one is free!</mark></strong></p>
-                        <button class="btn btn-lg btn-success" data-toggle="modal" data-target="#signUpModal">Sign Up!</button>
+                        <p><button class="btn btn-lg btn--cta btn--red" data-toggle="modal" data-target="#signUpModal">Sign Up!</button></p>
                         <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink responsibly.</small></p>
-                        <!--text-muted = bootstrap class-->
                     </section>
                 </div>
             </div>
